--- a/css/sass/elements/_elements.scss
+++ b/css/sass/elements/_elements.scss
@@ -33,6 +33,8 @@
 // General Classes
 @import "general-classes";
 
+// Hinweise / Notices / ALerts
+@import "notices";
 
 // WordPress Required Classes
 @import "wordpress";
