--- a/css/sass/frameworks/_frameworks.scss
+++ b/css/sass/frameworks/_frameworks.scss
@@ -2,8 +2,10 @@
 /* Frameworks
 /*-----------------------------------------------------------------------------------*/
 
-// Bootstrap Grid
-@import "bootstrap_colgrids";
 
-// jQuery UI for Backend
-// @import "jquery-ui";
+// Bootstrap 3.3.7
+@import "bootstrap";
+ 
+
+// jQuery UI for Backend 
+// @import "jquery-ui";  
