Template Parts strukturiert

--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -15,7 +15,7 @@ $breakSM:   480px;
 // iPad
 $breakMD:   767px;
 // iPad
-$breakLG:   979px;
+$breakLG:   992px; // 979px;
 // for small desktop up to 1200 pc or 1280 macbook air
 $break-1060:   1060px;
 // for larger desktop up to 1400 or macbook pro 1440
