--- a/css/sass/structure/_layout.scss
+++ b/css/sass/structure/_layout.scss
@@ -173,6 +173,24 @@ html, body, button {
 }
 */
 
+@media (max-width: $breakLG) {
+    	.sidebar-inline {
+		width: 240px;
+	}
+
+}
+/*
+@media (min-width: $break-1360) {
+    .sidebar-inline {
+		width: 260px;
+	}
+}
+@media (min-width: $break-1700) {
+    .sidebar-inline {
+		width: 300px;
+	}
+}
+*/
 
 @media (min-width: $breakMD) and (max-width: $breakLG) {
 /*	.row {
