--- a/css/sass/structure/_sidebar.scss
+++ b/css/sass/structure/_sidebar.scss
@@ -6,7 +6,7 @@
 /* Sidebar: Inline */
 .sidebar-inline {
 	float: right;
-	width: 220px;
+	min-width: 220px;
 	margin-left: 30px;
 	padding-left: 18px;
 	margin-bottom: 11px;
@@ -37,22 +37,3 @@
 
    
 }
-
-@media (max-width: $breakLG) {
-    	.sidebar-inline {
-		width: 240px;
-	}
-
-}
-/*
-@media (min-width: $break-1360) {
-    .sidebar-inline {
-		width: 260px;
-	}
-}
-@media (min-width: $break-1700) {
-    .sidebar-inline {
-		width: 300px;
-	}
-}
-*/
