--- a/css/sass/structure/_sidebar.scss
+++ b/css/sass/structure/_sidebar.scss
@@ -7,10 +7,15 @@
 .sidebar-inline {
 	float: right;
 	min-width: 220px;
-	margin-left: 30px;
-	padding-left: 18px;
+	
+	margin-left: $fau-gutter-width;
 	margin-bottom: 11px;
+	margin-right: - ceil(($fau-gutter-width / 2));
+	
+	padding-left: ceil(($fau-gutter-width / 2));
+	
 	border-left: 2px solid $colorLightest;
+	
 	
 	.widget {
 		margin-bottom: 22px;
