--- a/css/sass/mixins/_mixins.scss
+++ b/css/sass/mixins/_mixins.scss
@@ -101,3 +101,14 @@ Mixins File for Wordpress Theme FAU
     height:1px;
     overflow:hidden;
 }
+
+@function px2rem($font-size, $base-font-size: 16) {
+	@return $font-size / $base-font-size + rem;
+}
+
+@mixin px2rem($font-size, $base-font-size: 16, $line: $font-size * 1.4) {
+  font-size: $font-size + px; // für den IE8
+  line-height: ($line) + px;
+  font-size: px2rem($font-size, $base-font-size);
+  line-height: ($line / $base-font-size) + rem;
+}
