--- a/css/sass/plugins/_plugins.scss
+++ b/css/sass/plugins/_plugins.scss
@@ -26,6 +26,9 @@
 // FAU Video
 @import "fau-video";
 
+// CMS Workflow
+@import "cms-workflow";
+
 
 // Social Share 
 // (not used yet)  @import "social-share";
