--- a/css/sass/structure/_breadcrumb.scss
+++ b/css/sass/structure/_breadcrumb.scss
@@ -9,7 +9,11 @@
 	padding: 10px 0;
 	position: relative;
 	z-index: 10;
+	
+	@include px2rem($font-size-breadcrumb);
+	
 	span {
 		padding: 0 5px;
 	}
+	
 }
